# ctci

./: CMakeLists.txt  Jenkinsfile  README.md  build.sh
C/: CMakeLists.txt
C/Chapter1/: CMakeLists.txt
C/Chapter1/1-1/: CMakeLists.txt  main.c  unique_str.h
C/Chapter1/1-1/src/: unique_str.c
C/Chapter1/1-2/: CMakeLists.txt  main.c  revstr.c
C/Chapter1/1-2/include/: revstr.h
C/Chapter1/1-3/: CMakeLists.txt  is_permutation.h  main.c  quicksort.h
C/Chapter1/1-3/src/: is_permutation.c
C/Chapter1/1-4/: CMakeLists.txt  main.c
C/Chapter1/1-4/include/: urlify.h
C/Chapter1/1-4/src/: urlify.c
C/Chapter1/1-5/: CMakeLists.txt  main.c
C/Chapter1/1-5/include/: compress_str.h
C/Chapter1/1-5/src/: compress_str.c
C/Chapter1/1-6/: CMakeLists.txt  main.c
C/Chapter1/1-6/include/: rotate_image.h
C/Chapter1/1-6/src/: rotate_image.c
C/Chapter1/1-7/: CMakeLists.txt  main.c
C/Chapter1/1-7/include/: zero_matrix.h
C/Chapter1/1-7/src/: zero_matrix.c
C/Chapter1/1-8/: CMakeLists.txt  main.c
C/Chapter1/1-8/include/: strrot.h
C/Chapter1/1-8/src/: strrot.c
C/Chapter2/: CMakeLists.txt  README.md
C/Chapter2/2-1/: CMakeLists.txt  main.c
C/Chapter2/2-1/include/: ll_remove_duplicates.h
C/Chapter2/2-1/src/: ll_remove_duplicates.c
C/Chapter2/2-2/: CMakeLists.txt  main.c
C/DataStructures/: CMakeLists.txt
C/DataStructures/include/linked_list/: linked_list_s.h  node_s.h
C/DataStructures/src/linked_list/: linked_list_s.c
C/helper_libs/: CMakeLists.txt
C/helper_libs/include/: print_array.h  reverse_string.h
C/helper_libs/src/: print_array.c  quicksort.c  reverse_string.c
